# ic_system

./: .gitignore  .test.env  Dockerfile  Makefile  alembic.ini  docker-compose.yml  log_conf.yaml  mypy.ini  pyproject.toml  setup.cfg
admin/: config.py  run_admin.py
admin/views/: finance.py  students.py
api/: config.py  run_api.py
api/redis/: redis.py
api/repositories/: finance.py  students.py
api/schemas/: financeDTO.py  studentDTO.py
api/services/: finance.py  student.py
api/src/dependencies/: tokens.py  uow.py
api/src/routers/: __init__.py  finance.py  students.py
api/tasks/: __init__.py  settings.py  tasks.py
api/tasks/cron/: finance_update.py  students_update.py
api/tasks/mail/: verify_mail.py
api/templates/mail/: verify_mail.html
api/utils/: repository.py  tandem.py  unitofwork.py
db/: __init__.py  base.py  settings.py
db/migrations/: env.py
db/migrations/versions/: 1f76c327cb52_.py  23369c09217e_.py  63abb5ac71eb_.py  88e4e880d714_.py  ee6efa17b4ec_.py
db/models/: finance.py  users.py
tests/: conftest.py
tests/api_tests/: conftest.py
tests/api_tests/module/api/routers/: test_finance_router.py  test_students_router.py
tests/api_tests/module/api/schemas/: test_financdDTO.py
tests/api_tests/module/services/: test_finance_serv.py
tests/api_tests/module/tasks/: test_cron.py  test_cron_module.py
tests/integration/tasks/: test_cron_integration.py
tests/module/api/routers/: test_finance_router.py
tests/module/api/services/: test_finance_service.py
tests/module/api/tasks/: test_cron_finance.py  test_cron_students.py
(+2 files in other folders)
