[tool.poetry]
name = "ic-system"
version = "0.1.0"
description = ""
authors = ["Evgeniy Ermakov <erma2001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pytest-mock = "^3.12.0"
uvicorn = "^0.27.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyodbc = "^5.1.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pep8-naming = "^0.13.3"
isort = "^5.13.2"
mypy = "^1.8.0"
black = "^24.1.1"
unify = "^0.5"
setuptools = "^69.0.3"
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
fastapi = "^0.109.0"
flask = "^3.0.1"
flask-admin = "^1.6.1"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
sqlalchemy-utils = "^0.41.1"
flake8-awesome = "<1.3"
pytest = "<8"
pytest-asyncio = "^0.23.4"
pytest-dotenv = "^0.5.2"
celery = "^5.3.6"
redis = "^5.0.1"
httpx = "^0.26.0"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true
exclude = "db/models*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
